...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="DisplayDataList" title="List" id="BYZ-38-t0r" customClass="DisplayDataList" customModule="RemindMe" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hlP-xy-2Kr">
                                        <rect key="frame" x="20" y="20" width="374" height="34"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Surname" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h0w-i8-dZz">
                                        <rect key="frame" x="20" y="86" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Relation" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gqL-5K-vit">
                                        <rect key="frame" x="20" y="152" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UPe-2I-4sB">
                                        <rect key="frame" x="20" y="214" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date Of Birth" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mez-oe-jcr">
                                        <rect key="frame" x="20" y="282" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date Of Anniversary" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6UW-qL-nSg">
                                        <rect key="frame" x="20" y="350" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oQQ-UZ-YrR">
                                        <rect key="frame" x="20" y="418" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Submit">
                                            <fontDescription key="titleFontDescription" name=".SFUI-Semibold" family=".AppleSystemUIFont" pointSize="19"/>
                                        </buttonConfiguration>
...
